# subyo

./: .gitignore  Taskfile.yaml  pyproject.toml  setup.py
subyo/: __init__.py  __main__.py  cli.py
subyo/pipeline/: audio_recognition.py  translate.py
