[tool.poetry]
name = "pisarev"
version = "0.1.0"
description = ""
authors = ["cacko"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
transformers = "^4.18.0"
click = "^8.1.2"
torch = "^1.11.0"
pydub = "^0.25.1"
datasets = "^2.0.0"
speechbrain = "^0.5.11"
numpy = "1.22.3"
moviepy = "^1.0.3"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
